@@ -1,3 +1,9 @@
+Mon Sep 22 18:26:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.cpp: The
+	  set_component () created problems if we don't send a constant
+	  version of TAO_Tagged_Components. 
+
 Mon Sep 22 17:42:23 2003  Dale Wilson  <wilson_d@ociweb.com>
         * orbsvcs/test/FT_App/FT_ReplicaFactory_i.cpp
         * orbsvcs/test/FT_App/FT_ReplicaFactory_i.h
@@ -5,14 +11,14 @@ Mon Sep 22 17:42:23 2003  Dale Wilson  <wilson_d@ociweb.com>
         * orbsvcs/test/FT_App/FT_Replica.cpp
           Implement GenericFactory to create test replicas.
 
-        These changes were made in the oci_haft branch.
+          These changes were made in the oci_haft branch.
 
 Mon Sep 22 17:05:31 2003  Dale Wilson  <wilson_d@ociweb.com>
 
         * orbsvcs/Fault_Notifier/Fault_Notifier.mpc:
           Fixing some library dependancies.  Nothing significant.
 
-        These changes were made in the oci_haft branch.
+          These changes were made in the oci_haft branch.
 
 
 Sat Sep 20 16:46:29 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
